# agent-3md

./: .atlasignore  .attest.json  .gitignore  .npmrc  .trust.toml  AGENTS.md  CLAUDE.md  README.md  SPEC.md  agent.3md  fledge.toml  package.json  tsconfig.build.json  tsconfig.json
.github/workflows/: atlas.yml  ci.yml  publish.yml  trust.yml
.specsync/: adoption-report.json  config.toml  registry.toml  sdd.json
docs/: ROADMAP-1.0.md  integration-demo.md
examples/agents/: corvid.3md  devops.3md  support.3md
examples/conformance/: README.md  invalid-bad-entry.3md  invalid-bad-input-type.3md  invalid-bad-placeholder.3md  invalid-cycle.3md  invalid-dead-link.3md  invalid-dup-input.3md  invalid-dup-skill.3md  invalid-missing-frontmatter.3md  invalid-missing-label.3md  invalid-no-identity.3md  invalid-two-identities.3md  valid-command.3md  valid-cost.3md  valid-deps.3md  valid-entry.3md  valid-fallback-identity.3md  valid-minimal.3md  valid-typed-inputs.3md
examples/invalid/: dead-link.3md  dup-skill.3md  no-identity.3md
loaders/: README.md
loaders/rust/: Cargo.toml  README.md
loaders/rust/src/: main.rs
loaders/swift/: Package.resolved  Package.swift
specs/cli/: cli.spec.md  context.md  requirements.md  tasks.md  testing.md
specs/export/: context.md  export.spec.md  requirements.md  tasks.md  testing.md
specs/harnesses/: context.md  harnesses.spec.md  requirements.md  (+2 more)
src/: benchmark.ts  cli.ts  demo.ts  export.ts  index-query.ts  index.ts  integration-demo.ts  mcp-selftest.ts  mcp.ts  run.ts  runtime.ts  threemd.ts  validate.test.ts  validate.ts
(+100 files in other folders)
